fix(form/question): fix question label and activity content spacing Changes: - respect newline characters in question label/title strings - add padding to activity content on mobile
Other Changes:
- clean up form fixture for wizard form story
- add viewport addon to storybook and set up mobile view stories
- removed unused DatePicker import

--- a/src/atoms/questionLabel/questionLabel.module.scss
+++ b/src/atoms/questionLabel/questionLabel.module.scss
@@ -1,14 +1,12 @@
 .label {
   margin-bottom: var(--awell-spacing-1);
-  font-size: var(--awell-font-size-xl);
+  font-size: var(--awell-font-size-lg);
   font-weight: var(--awell-font-medium);
   color: rgb(55 65 81);
   display: block;
   line-height: var(--awell-leading-relaxed);
-
-  @media (min-width: 600px) {
-    font-size: var(--awell-font-size-lg);
-  }
+  // respect newline characters
+  white-space: pre-wrap;
 }
 
 .asterix {
